edit status room
