# routes/roomRoute.js
@@ -6,7 +6,7 @@ router.post('/admin/manageRoom', roomC.addRoom);
 router.put('/admin/manageRoom/:id', roomC.putRoom);
 // edit manageRoom path
 router.post('/admin/uploadRoomImage/:id/:roomName', roomC.uploadRoomImage);
-router.get('/admin/AllRoom', roomC.searchAllRoom);
+router.get('/allRoom', roomC.searchAllRoom);
 // router.get('/admin/PaginationRoom/:page', roomC.PaginationRoom);
 router.get('/admin/searchRoom/:id?', roomC.searchRoom);
 router.get('/admin/room/:id', roomC.getRoomById);
